--- a/css/xs.css
+++ b/css/xs.css
@@ -1,5 +1,8 @@
 /* NAV CSS //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
+.navbar{
+	transform:translateZ(0)
+}
 .navbar-default{
 	text-align:center;
 }
@@ -7,12 +10,19 @@
 	display:none;
 }
 .navbar-default .navbar-nav li a{
-	font-size:1em;
+	font-size:1.5em;
 	color:#ffffff;
 	line-height:1px;
+	padding:20px 0;
 }
 div.navbar-collapse.collapse.in{
 	background-color:#C1B3C4;
+}
+
+/* HERO CSS /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+.hero-bg{
+	background-attachment: scroll;
 }
 
 /* FYI CSS //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
@@ -22,6 +32,12 @@ div.navbar-collapse.collapse.in{
 }
 .fyi-bg{
 	text-align:center;
+}
+
+/* VENUE CSS ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+.resort-bg{
+	background-attachment:scroll;
 }
 
 /* SQUAD CSS ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
@@ -39,12 +55,21 @@ div.navbar-collapse.collapse.in{
 	text-shadow: 2px 2px 2px #000000;
 }
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
-    font-size: 1.5em;
+	font-size: 1.5em;
 }
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
 	line-height:1.2em;
-    font-size: 1.2em;
+	font-size: 1.2em;
 }
 .info-text{
 	display:block;
+}
+.no-gutter h3 {
+display:block;
+}
+
+/* STORY CSS ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+.story-bg{
+	background-attachment:scroll;
 }
